<resources>
    <string name="app_name">4x4VehicleHireFraser</string>
    <string name="vehicle_description">Vehicle Description</string>
    <string name="vehicle_year_model">Year Model</string>
    <string name="vehicle_kms">Kms</string>
    <string name="vehicle_rego">Registration</string>
    <string name="vehicle_color">Colour</string>
    <string name="service_description">Description</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="service_price">Price</string>
    <string name="service_quantity">Quntity</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_service_item">Add Service Item</string>
    <string name="add_service">Add Service</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_service_repair">Repairs / Service</string>
    <string name="add_repair">Add Repair</string>
    <string name="search_for_service">Search for Service</string>
    <string name="service_date">Date</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="service_note">Note</string>
    <string name="service_page_heading">Service Page</string>
    <string name="expense_heading">Expense Page</string>
    <string name="hire_page_heading">Hire Page</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="save_service">Save Service</string>
    <string name="edit_service">Edit Service</string>
    <string name="save_service_item">Save service item</string>
    <string name="service_item">Service Item</string>
    <string name="hire_detail">Hire Detail</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="hire_name">Name</string>
    <string name="hire_days">Days</string>
    <string name="hire_email">Email</string>
    <string name="hire_price">Price</string>
    <string name="hire_kms">Current Kms</string>
    <string name="hire_note">Note(s)</string>
    <string name="hire_add">Add Hire</string>
    <string name="hire_delete">Delete Hire</string>
    <string name="hire_edit">Edit Hire</string>
    <string name="hire_start_date">Start Date</string>
    <string name="hire_end_date">End Date</string>
    <string name="hire_back">Back</string>
    <string name="do_login">Login</string>
    <string name="home_page">Home Page</string>
    <string name="search_frase">Enter search text</string>
    <string-array name="vehicle_model">
        <item>Please Select</item>
        <item>Landcruiser 4.2 Diesel Manual</item>
        <item>Landcruiser 6 Cylinder Petrol Automatic</item>
        <item>Landcruiser Prado 8 Seater Automatic Petrol</item>
    </string-array>
    <string-array name="vehicle_type">
        <item>Please Select</item>
        <item>Landcruiser (Petrol)</item>
        <item>Landcruiser (Diesel)</item>
        <item>Prado (Petrol)</item>
    </string-array>
</resources>