<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vehicleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/service_add_header"
            style="@style/TextTheme"
            android:text="@string/service_page_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/service_date"
            style="@style/EditTextTheme"
            android:hint="@string/service_date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_add_header" />

        <EditText
            android:id="@+id/service_description"
            style="@style/EditTextTheme"
            android:hint="@string/service_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_date" />

        <EditText
            android:id="@+id/service_kms"
            style="@style/EditTextTheme"
            android:hint="@string/vehicle_kms"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_description" />

        <EditText
            android:id="@+id/service_price"
            style="@style/EditTextTheme"
            android:hint="@string/service_price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_kms" />

        <Button
            android:id="@+id/addServiceBtn"
            style="@style/ButtonTheme"
            android:text="@string/add_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_price" />

        <Button
            android:id="@+id/addServiceItemBtn"
            style="@style/ButtonTheme"
            android:text="@string/add_service_item"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addServiceBtn" />

        <Button
            android:id="@+id/serviceDelete"
            style="@style/ButtonTheme"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addServiceItemBtn" />

        <Button
            android:id="@+id/serviceBack"
            style="@style/ButtonTheme"
            android:text="Back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceDelete" />

        <TextView
            android:id="@+id/service_Recycler_Header"
            style="@style/TextTheme"
            android:text="@string/service_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceBack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyServiceItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_Recycler_Header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>