<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vehicleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AddServiceItemFragment" >

    <TextView
        android:id="@+id/service_item_add_header"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Add Service Item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/serviceDescription"
        style="@style/EditTextTheme"
        android:hint="@string/service_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_item_add_header" />

    <EditText
        android:id="@+id/servicePrice"
        style="@style/EditTextTheme"
        android:hint="@string/service_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceDescription" />

    <EditText
        android:id="@+id/serviceQuantity"
        style="@style/EditTextTheme"
        android:hint="@string/service_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicePrice" />

    <Button
        android:id="@+id/addServiceBtn"
        style="@style/ButtonTheme"
        android:text="@string/save_service_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceQuantity" />

    <Button
        android:id="@+id/deleteServiveItemBtn"
        style="@style/ButtonTheme"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addServiceBtn" />

    <Button
        android:id="@+id/serviceBackBtn"
        style="@style/ButtonTheme"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteServiveItemBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>