<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hireLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hire_header"
            android:gravity="center"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hire_page_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hire_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/hire_start_date"
            android:inputType="date"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_header" />

        <EditText
            android:id="@+id/hire_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners"
            android:hint="@string/hire_end_date"
            android:inputType="date"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_start_date" />

        <EditText
            android:id="@+id/hire_days"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_corners"
            android:inputType="number"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hire_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_end_date" />

        <EditText
            android:id="@+id/hire_name"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hire_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_days" />

        <EditText
            android:id="@+id/hire_email"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hire_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_name" />

        <EditText
            android:id="@+id/hire_price"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hire_price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_email" />

        <EditText
            android:id="@+id/hire_note"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hire_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_price" />

        <Button
            android:id="@+id/hireAddBtn"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hire_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hire_note" />

        <Button
            android:id="@+id/hireBack"
            android:textColor="@color/white"
            android:background="@drawable/button_blue"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hire_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hireAddBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>